# StreamCrab

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  README.md
.cargo/: config.toml
benchmarks/: compare.py  run_all.sh
examples/wasm-counter/: Cargo.toml
examples/wasm-counter/src/: lib.rs
streamcrab-api/: Cargo.toml
streamcrab-api/src/: datastream.rs  environment.rs  lib.rs
streamcrab-api/tests/: acceptance_tests.rs  benchmark_comprehensive.rs  benchmark_stateful.rs  benchmark_stateless.rs  wasm_job.rs  windowing.rs  wordcount.rs
streamcrab-cli/: Cargo.toml
streamcrab-cli/src/: main.rs
streamcrab-core/: Cargo.toml  build.rs
streamcrab-core/examples/: parallel_keyed_aggregation.rs
streamcrab-core/proto/: streamcrab.proto
streamcrab-core/src/: channel.rs  checkpoint.rs  graph.rs  input_gate.rs  job_graph.rs  lib.rs  operator_chain.rs  output_gate.rs  partitioner.rs  process.rs  runtime.rs  state.rs  task.rs  time.rs  types.rs  window.rs
streamcrab-core/src/checkpoint/: aligner.rs  coordinator.rs  events.rs  metadata.rs  mod.rs  opendal_storage.rs  storage.rs
streamcrab-core/src/checkpoint/tests/: checkpoint_tests.rs  opendal_storage_tests.rs
streamcrab-core/src/cluster/: job_manager.rs  mod.rs  operator_factory.rs  recovery.rs  rescale.rs  scheduler.rs  task_manager.rs  types.rs
streamcrab-core/src/cluster/tests/: cluster_tests.rs  rescale_tests.rs
streamcrab-core/src/connectors/: kafka.rs  mod.rs
streamcrab-core/src/elastic/: autoscaler.rs  config.rs  mod.rs  router.rs
streamcrab-core/src/elastic/tests/: autoscaler_tests.rs  config_tests.rs  router_tests.rs
streamcrab-core/src/graph/: job_graph.rs  mod.rs  stream_graph.rs
streamcrab-core/src/graph/tests/: job_graph_tests.rs  stream_graph_tests.rs
streamcrab-core/src/network/: channel.rs  frame.rs  input_gate.rs  mod.rs  network_manager.rs  output_gate.rs  remote_gate.rs  tcp_connection.rs
streamcrab-core/src/network/tests/: channel_tests.rs  frame_tests.rs  input_gate_tests.rs  network_manager_tests.rs  output_gate_tests.rs  remote_gate_tests.rs  tcp_connection_tests.rs
streamcrab-core/src/runtime/: async_call.rs  core.rs  descriptors.rs  metrics.rs  mod.rs  operator_chain.rs  partitioner.rs  process.rs  shutdown.rs  task.rs
streamcrab-core/src/runtime/tests/: async_call_tests.rs  core_tests.rs  descriptors_tests.rs  metrics_tests.rs  operator_chain_tests.rs  partitioner_tests.rs  process_tests.rs  task_tests.rs
streamcrab-core/src/state/: hashmap.rs  mod.rs  service.rs  tiered.rs
streamcrab-core/src/state/tests/: hashmap_tests.rs  service_tests.rs  state_mode_tests.rs  tiered_tests.rs
streamcrab-core/src/tests/: types_tests.rs
streamcrab-core/src/time/: mod.rs  timer_service.rs  tracker.rs  watermark.rs
streamcrab-core/src/time/tests/: time_tests.rs
streamcrab-core/src/window/: assigners.rs  functions.rs  mod.rs  operator.rs  primitives.rs  triggers.rs
streamcrab-core/src/window/tests/: window_tests.rs
streamcrab-core/tests/: acceptance_cluster.rs  benchmark_latency.rs  benchmark_memory.rs  kafka_e2e.rs  reduce_micro_bench.rs  reduce_pipeline_profile.rs  s3_checkpoint_e2e.rs  simd_verification.rs
streamcrab-examples/: Cargo.toml
streamcrab-examples/src/: main.rs
streamcrab-examples/src/nexmark/: event.rs  generator.rs  mod.rs  queries.rs
streamcrab-flink-bridge/: Cargo.toml
streamcrab-flink-bridge/src/: arrow_ffi.rs  error.rs  handle_map.rs  jni_entry.rs  lib.rs
streamcrab-flink-java/: .gitignore  pom.xml
streamcrab-flink-java/.omc/state/: agent-replay-5bd136a6-df42-463d-8238-b5a7e579c442.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
streamcrab-flink-java/src/main/java/io/streamcrab/flink/: ArrowBatchConverter.java  BenchmarkJob.java  ComprehensiveBenchmarkJob.java  FilterJob.java  NativeLibLoader.java  NativeOneInputStreamOperator.java  NativeOperator.java  NexmarkBenchmarkJob.java  NexmarkGenerator.java  StatelessBenchmarkJob.java
streamcrab-flink-java/src/test/java/io/streamcrab/flink/: NativeOperatorIntegrationTest.java
streamcrab-paimon/: Cargo.toml
streamcrab-paimon/src/: lib.rs  sink.rs  source.rs
streamcrab-paimon/tests/: paimon_roundtrip.rs  paimon_sink_2pc.rs
streamcrab-sql/: Cargo.toml
streamcrab-sql/src/: lib.rs
streamcrab-sql/tests/: sql_pipeline.rs
streamcrab-vectorized/: Cargo.toml
streamcrab-vectorized/src/: batch.rs  convert.rs  hash_table.rs  lib.rs  memory.rs  spill.rs
streamcrab-vectorized/src/bridge/: batcher.rs  datafusion_op.rs  mod.rs  repartition.rs  vector_op.rs
streamcrab-vectorized/src/expression/: eval.rs  mod.rs
streamcrab-vectorized/src/operators/: hash_aggregate.rs  hash_join.rs  mod.rs  project_filter.rs  window_aggregate.rs
streamcrab-vectorized/tests/: benchmark_tests.rs  bridge_benchmark.rs  bridge_integration.rs  correctness_tests.rs  integration_tests.rs
streamcrab-wasm/: Cargo.toml
streamcrab-wasm-guest/: Cargo.toml
streamcrab-wasm-guest/.omc/state/: agent-replay-bfbfa626-f6be-4469-9f9c-528f49355b77.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
streamcrab-wasm-guest/src/: lib.rs
streamcrab-wasm/src/: abi.rs  lib.rs  operator.rs  runtime.rs
streamcrab-wasm/tests/: e2e_guest_tests.rs  operator_tests.rs
