[workspace]
members = [
    "streamcrab-api",
    "streamcrab-core",
    "streamcrab-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Fast hash
ahash = "0.8"

# Channels
crossbeam-channel = "0.5"

# Internal crates
streamcrab-api = { path = "streamcrab-api" }
streamcrab-core = { path = "streamcrab-core" }
