[package]
name = "streamcrab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
crossbeam-channel = { workspace = true }
