[package]
name = "streamcrab-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
crossbeam-channel = { workspace = true }
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true }
arc-swap = "1"
futures = "0.3"
rdkafka = { version = "0.36", features = ["dynamic-linking"] }
opendal = { version = "0.57.0", features = ["services-memory", "services-s3"] }

[build-dependencies]
tonic-build = "0.12"
