[package]
name = "streamcrab-vectorized"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Velox-inspired vectorized execution engine for StreamCrab"

[dependencies]
# Arrow columnar format (58 = the version paimon 0.2 / datafusion 53 pin)
arrow = { version = "58", features = ["ffi"] }
arrow-array = "58"
arrow-buffer = "58"
arrow-schema = "58"
arrow-ipc = "58"

# DataFusion expression/aggregate machinery (subcrates only — the full
# `datafusion` umbrella with SQL planner arrives in P11)
datafusion-common = "53"
datafusion-expr = "53"
datafusion-physical-expr = "53"
datafusion-functions-aggregate-common = "53"

# Core StreamCrab types
streamcrab-core = { path = "../streamcrab-core" }

# Fast hash
ahash = { workspace = true }

# Serialization (for state checkpoint)
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For test assertions
arrow-cast = "58"
# End-to-end tests driving the bridge through the DataStream API
streamcrab-api = { workspace = true }
